# The-Economist-Audio-Downloader

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/luxuan/apps/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/theeconomist/downloader/: FileAdapter.java  MusicService.java  PlayerApplication.java
app/src/main/java/com/theeconomist/downloader/activity/: BaseActivity.java  BaseMusicActivity.java  MainActivity.java  PlayerActivity.java  SplashActivity.java
app/src/main/java/com/theeconomist/downloader/bean/: BaseBean.java  EventBusBean.java  Mp3FileBean.java  PlayBean.java  SeekBean.java  TimeBean.java
app/src/main/java/com/theeconomist/downloader/dialog/: AddDialog.java  BaseDialog.java  DeleteDialog.java  DownloadDialog.java  InputDialog.java  NormalAskDialog.java  UnZipDialog.java
app/src/main/res/drawable/: add_file_progress_drawable.xml  button_background.xml  button_click.xml  dialog_background.xml  edittext_background.xml  gray_border.xml  gray_button_background.xml  item_background.xml  play_page_cover_top_line_shape.xml  progress_drawable.xml  red_button_background.xml  seekbar_circle_red_border.xml  seekbar_gray_drawable.xml  white_right_drawable_r4.xml
app/src/main/res/layout/: activity_main.xml  activity_play.xml  activity_splash.xml  common_play_status_layout.xml  common_text_title.xml  dialog_ask_layout.xml  file_operation_dialog.xml  include_common_playstatus_layout.xml  include_common_text_title.xml  input_dialog_layout.xml  loading_layout.xml  music_file_item.xml
app/src/main/res/values/: colors.xml  dimen.xml  strings.xml  styles.xml
app/src/main/res/xml/: filepaths.xml
app/src/test/java/com/luxuan/apps/: ExampleUnitTest.java
commonlib/: build.gradle
commonlib/src/androidTest/java/com/luxuan/commonlib/: ExampleInstrumentedTest.java
commonlib/src/main/: AndroidManifest.xml
commonlib/src/main/jni/ffmpeg/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
commonlib/src/main/jni/ffmpeg/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
commonlib/src/main/jni/ffmpeg/x86/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
commonlib/src/main/jni/ffmpeg/x86_64/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
commonlib/src/main/jni/openssl/include/openssl/: configuration.h  opensslconf.h
commonlib/src/main/jni/openssl/openssl/: configuration.h
commonlib/src/test/java/com/luxuan/commonlib/: ExampleUnitTest.java
ffmpegmediametaretriever/: build.gradle
ffmpegmediametaretriever/src/androidTest/java/com/luxuan/ffmpegmediametaretriever/: ExampleInstrumentedTest.java
ffmpegmediametaretriever/src/main/: AndroidManifest.xml
ffmpegmediametaretriever/src/main/java/com/luxuan/ffmpegmediametaretriever/: FFmpegMediaMetadataRetriever.java
ffmpegmediametaretriever/src/main/jni/: Android.mk  Application.mk
ffmpegmediametaretriever/src/main/jni/ffmpeg/: Android.mk
ffmpegmediametaretriever/src/main/jni/metadata/: Android.mk  Mutex.h  ffmpeg_mediametadataretriever.c  ffmpeg_mediametadataretriever.h  ffmpeg_utils.h  luxuan_media_MediaMetadataRetriever.cpp  mediametadataretriever.cpp  mediametadataretriever.h
ffmpegmediametaretriever/src/main/libs/arm64-v8a/: gdb.setup
ffmpegmediametaretriever/src/main/libs/armeabi-v7a/: gdb.setup
ffmpegmediametaretriever/src/main/libs/x86/: gdb.setup
ffmpegmediametaretriever/src/main/libs/x86_64/: gdb.setup  gdbserver
ffmpegmediametaretriever/src/main/res/values/: strings.xml
ffmpegmediametaretriever/src/test/java/com/luxuan/ffmpegmediametaretriever/: ExampleUnitTest.java
ffmpegmediaplayer/: build.gradle
ffmpegmediaplayer/src/androidTest/java/com/luxuan/media/: ExampleInstrumentedTest.java
ffmpegmediaplayer/src/main/: AndroidManifest.xml
ffmpegmediaplayer/src/main/java/com/luxuan/media/: FFmpegMediaPlayer.java  Metadata.java  TimedText.java
ffmpegmediaplayer/src/main/jni/: Android.mk  Application.mk
ffmpegmediaplayer/src/main/jni/SDL/: Android.mk
ffmpegmediaplayer/src/main/jni/ffmpeg/: Android.mk
ffmpegmediaplayer/src/main/jni/openssl/: Android.mk
ffmpegmediaplayer/src/main/jni/player/: Android.mk  Errors.h  Mutex.h  audioplayer.c  audioplayer.h  ffmpeg_mediaplayer.c  ffmpeg_mediaplayer.h  ffmpeg_utils.c  ffmpeg_utils.h  luxuan_media_MediaPlayer.cpp  mediaplayer.cpp  mediaplayer.h  videoplayer.c  videoplayer.h
ffmpegmediaplayer/src/main/libs/arm64-v8a/: gdb.setup  gdbserver
ffmpegmediaplayer/src/main/libs/armeabi-v7a/: gdb.setup  gdbserver
ffmpegmediaplayer/src/main/libs/x86/: gdb.setup  gdbserver
ffmpegmediaplayer/src/main/libs/x86_64/: gdb.setup
ffmpegmediaplayer/src/main/res/values/: strings.xml
ffmpegmediaplayer/src/test/java/com/luxuan/media/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
musicapp/: CMakeLists.txt  build.gradle
musicapp/src/androidTest/java/com/luxuan/musicapp/: ExampleInstrumentedTest.java
musicapp/src/main/: AndroidManifest.xml
musicapp/src/main/cpp/: FFmpegMusic.cpp  native-lib.cpp
musicapp/src/main/java/com/luxuan/musicapp/: MainActivity.java  MusicPlay.java
musicapp/src/main/java/com/luxuan/musicapp/widget/: EqualizerView.java  LrcEntry.java  LrcUtils.java  LrcView.java
musicapp/src/main/res/layout/: activity_main.xml
musicapp/src/main/res/values/: colors.xml  dimen.xml  strings.xml
musicapp/src/test/java/com/luxuan/musicapp/: ExampleUnitTest.java
musiclib/: CMakeLists.txt  build.gradle
musiclib/libs/include/ffmpeg/libavutil/: ffversion.h
musiclib/src/main/: AndroidManifest.xml
musiclib/src/main/cpp/: FFmpegMusic.cpp  FFmpegMusic.h
musiclib/src/main/res/values/: strings.xml
(+26 files in other folders)
